<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_addmemoir_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dip"
            android:layout_marginBottom="10dp"
            android:contentDescription="TODO"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/tv_addmemoir_moviename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="10dp"
            android:text="MovieName"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_addmemoir_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Year"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:textSize="18dp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-------"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"/>


        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="@string/dateTimeSelect"
            android:textSize="14dp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/dp_datetime"
            android:layout_width="225dp"
            android:layout_height="116dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_weight="4" />

        <Button
            android:id="@+id/btn_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Get Date and Time"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"/>

        <TextView
            android:id="@+id/tv_addmemoir_datetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="@string/cinemaSelect"
            android:textSize="14dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cinemaSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginBottom="20dp" />

        <!--        <Button
            android:id="@+id/btn_cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Get Cinema and Postcode"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"/>-->

<!--        <TextView
            android:id="@+id/tv_addmemoir_cinema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:paddingBottom="10dp"/>-->

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="@string/addcinema"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_addcinemaname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Cinema Name"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"/>

        <EditText
            android:id="@+id/et_addpostcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Postcode"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"/>

        <Button
            android:id="@+id/btn_addcinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="Add Cinema"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_displaytextcinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:textStyle="bold"
            android:paddingBottom="20dp"/>



        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="@string/addcomment"
            android:textSize="14dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:hint="Type your comment here."
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="@string/rate"
            android:textSize="14dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize=".5"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_submitrating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:text="Rate"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tv_addrating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/btn_submitdetails"
            android:layout_width="323dp"
            android:layout_height="65dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:text="Submit details" />

        <TextView
            android:id="@+id/tv_displaytextmemoir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:textStyle="bold"
            android:paddingBottom="20dp"/>







    </LinearLayout>
</ScrollView>